# WhiteboxCipher2

./: .gitignore  CMakeLists.txt  README.md  WhiteboxCipher2.mk
include/AisinoSSL/: aisinossl_config.h
include/AisinoSSL/aes/: aes.h
include/AisinoSSL/internal/: aisinossl_random.h  ayconfig.h  byteorder.h  debug_utils.h  openssl_aid.h  types.h
include/AisinoSSL/m4ri/: brilliantrussian.h  djb.h  echelonform.h  io.h  m4ri.h  m4ri_config.h  misc.h  mmc.h  mp.h  mzd.h  mzp.h  parity.h  ple.h  ple_russian.h  ple_russian_template.h  solve.h  strassen.h  triangular.h  triangular_russian.h  xor.h  xor_template.h
include/AisinoSSL/math/: affine_transform.h  matrix_gf2.h
include/AisinoSSL/mbedtls/: aes.h  aesni.h  arc4.h  asn1.h  asn1write.h  bignum.h  blowfish.h  bn_mul.h  camellia.h  ccm.h  cipher.h  cipher_internal.h  cmac.h  compat-1.3.h  config.h  ctr_drbg.h  debug.h  des.h  dhm.h  ecdh.h  ecdsa.h  ecjpake.h  ecp.h  entropy.h  entropy_poll.h  gcm.h  hmac_drbg.h  md.h  md2.h  md4.h  md5.h  md_internal.h  memory_buffer_alloc.h  net.h  net_sockets.h  oid.h  padlock.h  pk.h  pk_internal.h  pkcs11.h  (+23 more)
include/AisinoSSL/openssl/: modes.h
include/AisinoSSL/rsa/: rsa_cloud.h
include/AisinoSSL/sm2/: sm2.h  sm2_cloud_signature.h  sm2_cloud_v.h  sm2_m_serializable_json.h  sm2_mobile_signature.h
include/AisinoSSL/sm2jni/: com_artifex_cloudcert_CloudCertCore.h  jni.h
include/AisinoSSL/sm3/: sm3.h
include/AisinoSSL/sm4/: sm4.h
include/AisinoSSL/sm4_whitebox/: sm4_whitebox.h  sm4_whitebox_config.h  sm4_whitebox_generator.h
include/feistalBox/: feistalBox.h
include/jni/: FeistalBoxJni.h
include/matrixlib/: affine_transform.h  matrix_gf2.h
include/wbc2/: mode.h  wbc2.h
lib/macOS/: libAisinoSSL.dylib  libAisinoSSL_SM4WB.dylib  libMatrixLib.dylib
test/: count_cycles.h  test_main.c
